--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -11,22 +11,7 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
-  font-family: Arial, sans-serif;
-  background-color: #f9f9f9;
-}
-
-.app-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  height: 600px;
-  width: 600px;
-  padding: 20px;
-  background-color: white;
-  border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  background-color: lightgray;
 }
 
 h1 {
@@ -35,53 +20,75 @@ h1 {
   margin-bottom: 20px;
 }
 
-.app-details-1 {
+p {
+  font-size: 10px;
+  color: #555;
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
+/* MAIN BODY */
+.app-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  height: 100vh;
+  width: 100vw;
+  padding: 20px;
+  background-color: white;
+}
+
+.content-container {
+  display: flex;
+  flex-direction: column;
+}
+
+/* WAIITNG */
+.waiting-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.waiting-header {
   position: absolute;
   top: 20px;
   left: 20px;
 }
 
-.app-details-2 {
+.waiting-subheader {
   position: absolute;
   top: 20px;
   right: 20px;
 }
 
-.app-input-container {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 5px;
+.waiting-load {
+  display: flex;
+  flex-direction: row;
 }
 
-.app-input-header-1 {
-  font-size: 10px;
-  margin-right: 70px;
-}
-
-.app-input-header-2 {
-  font-size: 10px;
-  margin-right: 88px;
-}
-
-.app-input {
+/* INPUT */
+.input-container {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.app-body {
-  display: flex;
-  flex-direction: column;
+.input-grid-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 5px;
 }
 
-.app-waiting {
-  display: flex;
-  flex-direction: column;
+.input-header-left {
+  font-size: 10px;
+  margin-right: 70px;
 }
 
-.app-loading {
-  display: flex;
-  flex-direction: row;
+.input-header-right {
+  font-size: 10px;
+  margin-right: 88px;
 }
 
 input[type="text"] {
@@ -91,11 +98,12 @@ input[type="text"] {
   max-width: 300px;
   margin-bottom: 20px;
   border: 1px solid #ddd;
-  border-radius: 5px;
+  border-radius: 10px;
   outline: none;
 }
 
-.app-button {
+/* JOIN BUTTON */
+.join-button {
   padding: 10px 20px;
   font-size: 12px;
   color: #ffffff;
@@ -106,27 +114,33 @@ input[type="text"] {
   transition: background-color 0.2s;
 }
 
-.app-button:disabled {
+.join-button:disabled {
   background-color: #9E9E9E;
   cursor: not-allowed;
 }
 
-.app-button:hover:not(:disabled) {
+.join-button:hover:not(:disabled) {
   background-color: #45a049;
 }
 
-.app-game-container {
-  margin-top: 20px;
+/* GAME CONTAINER */
+.game-container {
+  margin-top: 5px;
 }
 
-.app-game {
+.game-message-container {
+  margin-top: 5px;
+}
+
+.board-container {
   display: grid;
   grid-template-columns: repeat(3, 100px);
   gap: 10px;
   margin-top: 10px;
+  justify-content: center;
 }
 
-.app-game-button {
+.board-button {
   width: 100px;
   height: 100px;
   font-size: 2rem;
@@ -138,22 +152,16 @@ input[type="text"] {
   transition: background-color 0.2s, color 0.2s;
 }
 
-.app-game-button:hover {
+.board-button:hover {
   background-color: #e0e0e0;
 }
 
-.app-game-button:focus {
-  outline: 2px solid #4CAF50; /* Accessibility focus state */
+.board-button:focus {
+  outline: 2px solid #4CAF50;
 }
 
-p {
-  font-size: 10px;
-  color: #555;
-  margin-top: 5px;
-  margin-bottom: 5px;
-}
-
-.reset-button-container {
+/* RESET GAME */
+.reset-container {
   margin-top: 10px;
 }
 
